# synapse

./: .dockerignore  .env.selfhost.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATION_POLICY.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
config/: api_web_compat.json
docs/: adoption-connector-cookbook.md  adoption-existing-memory.md  agent-simulator.md  agentic-onboarding-benchmark.md  agentic-wiki-overview.md  architecture-diagram-pack.md  backup-restore-drill.md  buyer-roi-rollout.md  cognitive-state-layer.md  company-knowledge-roadmap.md  compatibility-matrix.md  contributor-quickstart.md  core-product-scope.md  core-vs-enterprise.md  crewai-quickstart-5-min.md  enterprise-governance-pack.md  enterprise-readiness.md  framework-integrations.md  getting-started.md  knowledge-compiler-rfc.md  langchain-quickstart-5-min.md  langgraph-quickstart-5-min.md  legacy-import.md  legacy-sync-orchestration.md  mcp-runtime.md  observability-incident-playbooks.md  openclaw-integration.md  openclaw-provenance-verification.md  openclaw-quickstart-5-min.md  operations-route-runbook.md  operator-first-24h.md  operator-governance-deeplinks.md  oss-publish-checklist.md  oss-readiness.md  page-routing-roadmap.md  performance-tuning.md  (+13 more)
services/api/: Dockerfile  README.md  pyproject.toml
services/api/app/: db.py  enterprise.py  idempotency.py  main.py  synthesis_packs.py
services/api/scripts/: cleanup_idempotency.py
(+279 files in other folders)
