[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.46.0",
  "pydantic>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "PyJWT[crypto]>=2.9.0",
  "python-multipart>=0.0.20"
]
